--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>Learning GitHub</h1>
     <p>The first change</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur repudiandae corrupti iste possimus reprehenderit rerum? Nihil dignissimos facere similique cumque nostrum, ad repellat natus provident officia et quisquam praesentium voluptate?</p>
+    <p>The third change</p>
     
 </head>
 <body>
